<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alarm_list_bg_pressed">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.uniquestudio.library.CircleCheckBox
            android:id="@+id/isfinished"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            app:background_color="#e89abe"
            app:border_color="@color/colorWhite" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/isfinished"
            android:text="@string/list_item_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/time"
            android:singleLine="true"
            android:text="@string/list_item_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_marginLeft="48dp"
            android:text="@string/list_item_repeat"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/putlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@id/isEnable"
            android:text="标签" />

        <View
            android:layout_width="1px"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/isEnable"
            android:background="@color/colorblack" />

        <CheckBox
            android:id="@+id/isEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />


    </RelativeLayout>

</FrameLayout>
