<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alarm.AlarmDetailsActivity">

    <include
        android:id="@+id/head"
        layout="@layout/head_alarm_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_height"
        android:layout_alignParentTop="true" />
    <LinearLayout
        android:id="@+id/linerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/daiban"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/daiban" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/daiban"
                    android:background="@null"
                    android:ems="10"
                    android:hint="待办事务"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorAccent">

                </EditText>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlue" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/naozhong"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/naozhong" />

                <LinearLayout
                    android:background="@drawable/layout_selecter"
                    android:id="@+id/set_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/naozhong"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="55dp"
                        android:layout_height="wrap_content"
                        android:text="时间"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/wait_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="选择提醒时间"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlue" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/biaoqian"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/biaoqian" />

                <LinearLayout
                    android:id="@+id/set_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/biaoqian"
                    android:background="@drawable/layout_selecter"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="标签"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="选择标签"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlue" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/chongfu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/zhongfu" />

                <LinearLayout
                    android:id="@+id/set_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/chongfu"
                    android:background="@drawable/layout_selecter"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_repeat_name"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_repeat_choice"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlue" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/lingsheng"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lingsheng" />

                <LinearLayout
                    android:id="@+id/set_tone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/lingsheng"
                    android:background="@drawable/layout_selecter"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_tone_name"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/tone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_tone_choice"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlue" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:background="@color/colorBlue02"
        android:id="@+id/wendu_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/linerlayout"
        android:layout_marginTop="20dp">
        <ImageView
            android:background="@drawable/tianqi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/wendu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:text="0"
            android:textColor="@color/colorBlue"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/oc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/wendu"
            android:text="℃"
            android:textColor="@color/colorBlue"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wendu"
            android:layout_marginLeft="140dp"
            android:text="晴"
            android:textColor="@color/colorBlue"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wendu"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/type"
            android:text="0℃"
            android:textColor="@color/colorBlue"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/xxx"
            android:text="~"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/min"
            android:layout_below="@+id/wendu"
            android:layout_marginTop="3dp"
            android:textColor="@color/colorBlue"
            />
        <TextView
            android:id="@+id/max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wendu"
            android:layout_toRightOf="@id/xxx"
            android:textColor="@color/colorBlue"
            android:textSize="20sp"
            android:text="0℃"/>
    </RelativeLayout>
</RelativeLayout>